--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -86,7 +86,7 @@
   border-top: 1px solid $border-grey;
 
   background-repeat: no-repeat;
-  background-image: url("../../img/backgrounds/bg-description-iphone-desktop@1x.png");
+  background-image: url("../img/backgrounds/bg-description-iphone-desktop@1x.png");
   background-size: 31%;
   background-position: left 10px bottom 120px;
 
